# Quant_Ops_System

./: .gitignore  DAG按日状态对接文档.md  README.md  SANITIZATION_REPORT.md  config.example.yaml  ddb_monitor_group对接文档.md  index_components_data.py  ws_client.py  任务类型对接文档.md  数据监控对接文档.md  数据监控性能优化-后端对接.md  数据监控更新接口对接文档.md  数据监控频率对接文档.md  日志分页对接文档.md  用户模块对接文档.md  运维系统开发方案.docx  运维设计方案.html
quant_ops_system/: README.md  TASK_INVENTORY.md  TEST_WRITE_COMMANDS.md  market_requirements_root.txt  requirements.txt
quant_ops_system/db/migrations/: 001_init.sql  002_tasks.sql  003_default_params.sql  004_users.sql  005_dag_test_tasks.sql  006_pipeline_id_consistency.sql  007_beijing_time.sql  008_task_category.sql  009_ddb_monitor_frequency.sql  010_ddb_monitor_anomaly_threshold.sql
quant_ops_system/docker/: docker-compose.yml
quant_ops_system/libhv/: WORKSPACE.bazel
quant_ops_system/libhv/html/中文路径/: 中文名称.txt
quant_ops_system/ormpp/: .clang-format
quant_ops_system/ormpp/.github/workflows/: ci-sqlcipher.yml  ci-sqlite.yml  clang-format.yml
quant_ops_system/ormpp/ormpp/: mysql.hpp
quant_ops_system/requirements/: base.txt  py311_missing_from_py313.txt  py311_missing_from_py313.txt.bak  py311_recommended.txt  requirements.txt  vendor_tasks.txt
quant_ops_system/src/: __init__.py
quant_ops_system/src/agent/: install_linux_agent.sh  install_windows_agent.bat  linux_agent.py  quant_ops_agent.service  windows_agent.py
quant_ops_system/src/manager_cpp/: CMakeLists.txt  main.cpp
quant_ops_system/src/scripts/: runtime.py
quant_ops_system/src/scripts/basic_data/: basic_financial_data.py  consensus_rating.py  consensus_rolling.py  derived_financial_metrics.py  st_stock_list.py
quant_ops_system/src/scripts/connectors/cj_quant_db/: quant_db.py
quant_ops_system/src/scripts/data_monitor/: ddb_monitor_count.py
quant_ops_system/src/scripts/index_components_data/: index_components_data.py
quant_ops_system/src/scripts/market_data/: ah_info.py  compare_ddb_tables.py  download_data_from_wind_wsd.py  market_data_1w.py  market_data_etf.py  market_data_index.py  market_data_stock.py
quant_ops_system/src/scripts/my_utils/: __init__.py  get_code_list.py  get_filenames_without_extension.py  get_index_list.py  rq_etf.py  rq_index.py  rq_stock.py  trade_date_pre.py
quant_ops_system/src/scripts/test/: README.md  dag_test_task.py
quant_ops_system/src/scripts/vendor_basic_data/: run_stock_info.py
quant_ops_system/src/scripts/vendor_basic_data/batch_update/basic_data/: __init__.py  stock_info.py
quant_ops_system/src/scripts/vendor_basic_data/lib/: utils.py
quant_ops_system/src/scripts/vendor_basic_data/tables/basic_data/stock_info/: __init__.py
quant_ops_system/src/scripts/wind_utils/: __init__.py  wind_code.py
reference/: API接口契约.md  pipelineTypes.ts  types.ts  用户与权限接口.md
reference/src/: index.ts  types.ts
reference/src/lib/: auth.ts  buildDashboardMetrics.ts  delay.ts  permissions.ts  pipeline.ts  response.ts  syncDagTasks.ts
reference/src/routes/: agents.ts  auth.ts  dag.ts  dashboard.ts  logs.ts  pipelines.ts  settings.ts  tasks.ts  users.ts
reference/src/store/: agents.ts  auth.ts  dag.ts  dashboard.ts  logs.ts  pipelines.ts  settings.ts  tasks.ts  users.ts
数据库连接/dolphin/: dolphin_db_connector.cpp  dolphin_db_connector.hpp  dolphin_query_manager.cpp  dolphin_query_manager.h
数据库连接/mysql/: mysql_storage_manager.cpp  mysql_storage_manager.h
