workspace(name = "hv")
┌─────────────────────────────────────────────────────────────────┐
│                          用户层                                  │
│   ┌──────────────┐         ┌──────────────┐                     │
│   │  运维人员     │ ◄─────► │  Vue 3 前端   │                    │
│   └──────────────┘         └──────────────┘                     │
│                                      │                          │
│                                      │ HTTP / WebSocket         │
└──────────────────────────────────────┼──────────────────────────┘
                                       ▼
┌─────────────────────────────────────────────────────────────────┐
│                   管理端 (Manager)                               │
│                   核心: C++17 (libhv + ormpp)                   │
│                   验证: Python (FastAPI PoC)                    │
│  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐              │
│  │ HTTP API    │  │ WebSocket   │  │ DAG 调度器  │              │
│  │ 网关        │  │ 推送服务     │  │ (任务依赖)   │             │
│  └─────────────┘  └─────────────┘  └─────────────┘             │
│  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐             │
│  │ 节点管理器   │  │ 日志聚合器   │  │ 定向派发    │              │
│  │(心跳/指令)   │  │(缓冲/检索)  │  │(目标匹配引擎)│              │
│  └─────────────┘  └─────────────┘  └─────────────┘              │
└───────────────────────────┬─────────────────┬───────────────────┘
                            │                 │
              ┌─────────────┼─────────────────┼─────────────┐
              │             │                 │             │
              ▼             ▼                 ▼             ▼
        ┌──────────┐  ┌──────────┐     ┌──────────┐   ┌──────────┐
        │ MySQL 8  │  │ Redis 7  │     │ Linux    │   │ Windows  │
        │(元数据/   │  │(队列/缓存)│     │ Agent    │   │ Agent    │
        │ 持久化)   │  │          │     │(Python)  │   │(Python)  │
        └──────────┘  └──────────┘     └────┬─────┘   └────┬─────┘
                                            │              │
                                            ▼              ▼
                                  ┌─────────────────────────────┐
                                  │   全量收敛的业务脚本库        │
                                  │ (行情/财务/DolphinDB/C++扩展) │
                                  └─────────────────────────────┘
